--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ffffff" />
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="images/rhods-logo.svg">
     <title>Open Data Hub Dashboard</title>
   </head>
   <body>
